--- a/index.html
+++ b/index.html
@@ -20,9 +20,36 @@
 <script src="data:text/javascript;base64,cmVxdWlyZUxhenkoWyJTZXJ2ZXJKU1BheWxvYWRMaXN0ZW5lciJdLGZ1bmN0aW9uKG0pe20ucHJvY2VzcygpO30sbnVsbCwweDEwMCk=" nonce="8Emuspel" data-btmanifest="1030101164_main"></script>
 <script type="application/json"  data-content-len="567" data-sjs>{"require":[["Bootloader","handlePayload",null,[{"consistency":{"rev":1030101164},"indexUpgrades":{"__hsdp":":142,1218,39,524,2518,1179,2521,190,1227,1226,217,234,109,32,110,214,223,224,578,1,740,59,9,11,6,8,7,14,79,23,30,78,12,28,29,22,77,82,40,83,16,209,17,18,13,10,15,27,127,35,25,305,317,20,338,318,373,33,21,48,19,53,316,179,5,303,26,24,302,879,741,37,34,45,44,38,315,314,50,121,122,235,312,86,95,85,80,200,341,193,311,49,141,129,87,98,84,108,101,102,99,100,308,205,328,244,239,194,238,240,219,228,233,221,96,60,89,88,76,90,91,94,93,58,103,243,65,97,92,81"}}]]]}</script>
 <script src="data:text/javascript;base64,cmVxdWlyZUxhenkoWyJTZXJ2ZXJKU1BheWxvYWRMaXN0ZW5lciJdLGZ1bmN0aW9uKG0pe20ucHJvY2VzcygpO30sbnVsbCwweDEwMCk=" nonce="8Emuspel" data-btmanifest="1030101164_main"></script>
-</head><body class="_ar45 system-fonts--body segoe"><div id="splash-screen" style="position:fixed;z-index:100;top:0;left:0;width:100%;height:100%"><style type="text/css" nonce="8Emuspel">html{overflow-y:scroll!important}</style><img width="80px" height="80px" style="position:absolute;top:50%;left:50%;margin:-40px 0 0 -40px" src="igimage.png" /></span></div><script type="application/json"  data-content-len="91" data-sjs>{"require":[["qplTimingsServerJS",null,null,["7574474324360054846","splash_screen_show"]]]}</script>
-<script src="igimage.png" nonce="8Emuspel" data-btmanifest="1030101164_main"></script>
+</head>
+
+<body class="_ar45 system-fonts--body segoe">
+
+<div id="splash-screen" style="position:fixed;z-index:100;top:0;left:0;width:100%;height:100%">
+    <style type="text/css" nonce="8Emuspel">html{overflow-y:scroll!important}</style>
+
+    <!-- 🔥 AQUÍ REEMPLAZO LA IMAGEN GRANDE BASE64 POR TU igimage.png -->
+    <img width="80px" height="80px" 
+         style="position:absolute;top:50%;left:50%;margin:-40px 0 0 -40px" 
+         src="igimage.png" 
+         alt="logo" />
+
+    <span style="position:absolute;bottom:32px;left:50%;margin:-36px 0 0 -36px;">
+
+        <!-- 🔥 AQUÍ REEMPLAZO LA IMAGEN DEL SPAN POR TU igimage.png -->
+        <img width="72px" height="37px" 
+             src="igimage.png" 
+             alt="footer logo" />
+    </span>
+</div>
+
+<script type="application/json" data-content-len="91" data-sjs>
+    {"require":[["qplTimingsServerJS",null,null,["7574474324360054846","splash_screen_show"]]]}
+</script>
+
+<script src="data:text/javascript;base64,cmVxdWlyZUxhenkoWyJTZXJ2ZXJKU1BheWxvYWRMaXN0ZW5lciJdLGZ1bmN0aW9uKG0pe20ucHJvY2VzcygpO30sbnVsbCwweDEwMCk=" nonce="8Emuspel" data-btmanifest="1030101164_main"></script>
+
 <div id="mount_0_0_k8"></div>
+
 <link type="text/css" rel="stylesheet" href="https://static.cdninstagram.com/rsrc.php/v5/yn/l/0,cross/dobRsovs1HkJQidLskOpub9xGOSJoq4L9fgQe914iiBfONMKn3YhINqU49pVNahkCkQvuWABIjhhRs97xFZK--hBruhBENOpKm_.css" data-bootloader-hash="KSMkhPq" data-async-css="1" crossorigin="anonymous" data-p=":12,35,2,16,7,3,8,4,5" data-btmanifest="1030101164_main" data-c="1" /><script type="application/json"  data-content-len="53" data-sjs>{"require":[["maybeDisableAnimations",null,null,[]]]}</script>
 <script src="data:text/javascript;base64,cmVxdWlyZUxhenkoWyJTZXJ2ZXJKU1BheWxvYWRMaXN0ZW5lciJdLGZ1bmN0aW9uKG0pe20ucHJvY2VzcygpO30sbnVsbCwweDEwMCk=" nonce="8Emuspel" data-btmanifest="1030101164_main"></script>
 <script type="application/json"  data-content-len="49" data-sjs>{"require":[["replaceNativeTimer",null,null,[]]]}</script>
